# social_crontab

./: .env.example  README.md  pyproject.toml  requirements-lock.txt  requirements.txt  setup.py
.claude/: settings.local.json
.serena/: project.yml
backlog/: config.yml
backlog/tasks/: task-1 - Create-project-structure.md  task-1 - Create-project-structure.md.save  task-10 - Add-media-upload-support-for-LinkedIn.md  task-11 - Build-CLI-framework-with-Click.md  task-12 - Implement-post-file-parser.md  task-13 - Implement-scheduler-system.md  task-14 - Implement-CLI-commands-(login,-post,-queue,-comment).md  task-15 - Add-integration-tests-and-documentation.md  task-16 - Design-comment-post-relationship-model-without-URN.md  task-17 - Implement-comment-post-relationship-storage-layer.md  task-18 - Update-comment-scheduling-to-support-pre-publication-comments.md  task-19 - Implement-URN-resolution-for-comment-posting.md  task-2 - LinkedIn-Provider-MVP-Implementation-(Epic).md  task-20 - Add-CLI-tab-completion-support.md  task-21 - Support-PDF-carousel-uploads-for-LinkedIn.md  task-3 - Set-up-project-structure-and-dependencies.md  task-4 - Implement-core-SocialProvider-abstraction.md  task-5 - Build-configuration-management-system.md  task-6 - Implement-storage-and-logging-infrastructure.md  task-7 - Implement-LinkedIn-OAuth-2.0-authentication.md  (+2 more)
docs/: COMPLETION.md  LINKEDIN_SETUP.md  QUICK_FIX.md  USER_GUIDE.md  spec.md
scripts/: test_linkedin_oauth.sh
socialcli/: __init__.py
socialcli/core/: __init__.py  (+6 more)
tests/: __init__.py  conftest.py  test_config.py
(+30 files in other folders)
